# fast-api-crc32

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
app/: config.py  logging.py  main.py
app/dependencies/: pdf.py
app/middleware/: validation.py
app/routers/: crc.py  health.py
app/schemas/: pdf.py
tests/: test_calcular_crc.py
